--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -752,54 +752,56 @@
 
 .contact .contact-container {
 	@extend .page-container-setup;
+	max-height: 400px;
+	box-sizing: border-box;
+	padding: 40px;
 }
 
-.contact .contact-container .h2,.h5 {
-	text-align: center;
+.contact-container{
+	h4{
+		font-size: 30px;
+		padding-bottom: 8px;
+	}
+
+	h5 {
+		font-size: 24px;
+		padding-bottom: 8px;
+	}
+
+	h6 {
+		font-size: 18px;
+	}
+
+	h6 span {
+		color: $secondary-color;
+	}
+
+	ul {
+		list-style: none;
+	}
+
+	ul li {
+		display: inline-block;
+		padding: 10px 9px 0px 0px;
+		font-size: 18px;
+	}
+
+	ul li i.fa.fa-facebook {
+		color: #3b5998;
+	}
+	
+	ul li i.fa.fa-instagram {
+		color:  #C13584;
+	}
+	
+	ul li i.fa.fa-twitter {
+		color: #1DA1F2;
+	}
+	
 }
 
-.contact .form-container {
-	width: 60%;
-	margin: 20px auto;
-}
 
-.contact input[type=text].form-input {
-	width: 100%;
-	margin-bottom: 10px;
-	border-radius: 5px;
-	border: 1px solid $primary_color;
-	padding: 0px 5px;
-	font-family: sans-serif;
-	height: 50px;
-	line-height: 50px;
-}
 
-.contact textarea.form-message {
-	width: 100%;
-	height: 200px;
-	padding: 10px 10px;
-	border-radius: 5px;
-	border: 1px solid $primary_color;
-
-}
-
-.contact input[type=text].form-nput:focus {
-	border: 1px solid $secondary_color;
-}
-
-.contact textarea.form-message:focus {
-	border: 1px solid #fff;
-}
-
-.contact a.submit {
-	padding: 10px 20px;
-	color: $tertiary_white;
-	background-color: $secondary_color;
-}
-
-.contact a.submit:hover {
-	box-shadow: -1px 2px 3px rgba(0,0,0,0.5);
-}
 
 /** Cart Page **/
 .cart {
