--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -867,6 +867,20 @@ ul {
   overflow-y: scroll;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #33b27b;
+  border-radius: 5px;
+  height: 100px;
+}
+
 .shop-left #categories ul li {
   display: block;
   padding-bottom: 10px;
