--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -935,6 +935,20 @@
 	overflow-y: scroll;
 }
 
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: $bg-color;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: $secondary-color;
+	border-radius: 5px;
+	height: 100px;
+}
+
 .shop-left #categories ul li {
 	display: block;
 	padding-bottom: 10px;
