--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -48,6 +48,20 @@ ul {
 }
 
 /** reset code **/
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 5px;
+  height: 100px;
+}
+
 /** Home BG **/
 .home {
   background-color: #f5f5f5;
@@ -715,7 +729,7 @@ ul {
 
 /** contact us **/
 .contact .contact-container {
-  max-height: 400px;
+  max-height: 200px;
   box-sizing: border-box;
   padding: 40px;
 }
@@ -865,20 +879,6 @@ ul {
 .shop-left #categories {
   height: 250px;
   overflow-y: scroll;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #f5f5f5;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #33b27b;
-  border-radius: 5px;
-  height: 100px;
 }
 
 .shop-left #categories ul li {
