--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -17,6 +17,21 @@
 @import 'reset';
 
 
+::-webkit-scrollbar {
+	width: 7px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: $bg-color;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: grey;
+	border-radius: 5px;
+	height: 100px;
+}
+
+
 /** Home BG **/
 .home {
 	background-color: $bg-color;
@@ -752,7 +767,7 @@
 
 .contact .contact-container {
 	@extend .page-container-setup;
-	max-height: 400px;
+	max-height: 200px;
 	box-sizing: border-box;
 	padding: 40px;
 }
@@ -933,20 +948,6 @@
 .shop-left #categories {
 	height: 250px;
 	overflow-y: scroll;
-}
-
-::-webkit-scrollbar {
-	width: 8px;
-}
-
-::-webkit-scrollbar-track {
-	background-color: $bg-color;
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: $secondary-color;
-	border-radius: 5px;
-	height: 100px;
 }
 
 .shop-left #categories ul li {
