--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -98,6 +98,12 @@
     vertical-align: top;
 }
 
+@media (min-width: 767px) {
+	.container .hide-cart {
+		display: none;
+	}
+}
+
 /** Carousel **/
 .carousel-container {
 	padding-top: 20px;
