--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -632,7 +632,7 @@ ul {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 30%;
+  min-width: 40%;
   min-height: 40%;
   background-color: #fff;
   padding: 20px;
@@ -644,6 +644,11 @@ ul {
   font-weight: 600;
 }
 
+@media screen and (max-width: 580px) {
+  .admin-login .admin-inner {
+    min-width: 90%;
+  }
+}
 .admin-inner form .username, .password {
   width: 100%;
   height: 40px;
