--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -133,6 +133,11 @@ ul {
     display: none;
   }
 }
+@media (max-width: 767px) {
+  .container .hide-main-cart {
+    display: none;
+  }
+}
 /** Carousel **/
 .carousel-container {
   padding-top: 20px;
