--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -69,7 +69,7 @@ ul {
 }
 
 .home .home-inner {
-  width: 97%;
+  width: 93%;
   margin: auto;
 }
 
@@ -83,7 +83,7 @@ ul {
 }
 
 .container {
-  min-width: 98% !important;
+  min-width: 97% !important;
 }
 
 .navbar {
@@ -141,12 +141,7 @@ ul {
 /** Carousel **/
 .carousel-container {
   padding-top: 20px;
-  width: 97%;
-  margin: auto;
-}
-
-#myCarousel {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 100%;
 }
 
 .carousel-inner .text-content {
@@ -252,9 +247,23 @@ ul {
   display: block;
 }
 
+.sidebar-img {
+  width: 100%;
+  max-height: 190px;
+}
+
+.sidebar-img:first-child {
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  .sidebar-carousel {
+    display: none;
+  }
+}
 /** Latest Deals **/
 .latest-deals {
-  width: 97%;
+  width: 100%;
   margin: 20px auto;
   background-color: #fff;
 }
@@ -330,14 +339,18 @@ ul {
   text-decoration: underline;
 }
 
+.swiper-button-next, .swiper-button-prev {
+  color: #33b27b !important;
+}
+
 .category {
-  width: 97%;
+  width: 100%;
   height: 300px;
   background-color: #fff;
   margin: 15px auto;
 }
 
-.category .category-tile {
+.category .category-title {
   width: 100%;
   height: 40px;
   border-bottom: 1px solid #f5f5f5;
@@ -415,6 +428,7 @@ ul {
 /** Trending Category **/
 .trending-category {
   width: 97%;
+  height: 290px;
   margin: 15px auto;
   background-color: #fff;
 }
@@ -873,7 +887,7 @@ ul {
 
 .shop-container .shop-left ul {
   list-style: none;
-  padding-bottom: 8px;
+  margin-bottom: 9px;
 }
 
 .shop-left ul li {
@@ -887,8 +901,9 @@ ul {
 }
 
 .shop-left #categories {
-  height: 250px;
+  height: 200px;
   overflow-y: scroll;
+  transition: 0.5s ease-in-out;
 }
 
 .shop-left #categories ul li {
